// Vitest Snapshot v1

exports[`<EditSubtraction /> > should render after name is changed 1`] = `
<Modal
  label="Edit Subtraction"
  onHide={[MockFunction spy]}
  show={true}
>
  <ModalHeader>
    Edit Subtraction
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Styled(styled.div)>
      <InputGroup>
        <styled.label>
          Name
        </styled.label>
        <Styled(UnstyledInput)
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <styled.label>
          Nickname
        </styled.label>
        <Styled(UnstyledInput)
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Styled(styled.div)>
    <Styled(Component)>
      <SaveButton />
    </Styled(Component)>
  </form>
</Modal>
`;

exports[`<EditSubtraction /> > should render after name is changed 2`] = `
<Modal
  label="Edit Subtraction"
  onHide={[MockFunction spy]}
  show={true}
>
  <ModalHeader>
    Edit Subtraction
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Styled(styled.div)>
      <InputGroup>
        <styled.label>
          Name
        </styled.label>
        <Styled(UnstyledInput)
          name="name"
          onChange={[Function]}
          value="Foo"
        />
      </InputGroup>
      <InputGroup>
        <styled.label>
          Nickname
        </styled.label>
        <Styled(UnstyledInput)
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Styled(styled.div)>
    <Styled(Component)>
      <SaveButton />
    </Styled(Component)>
  </form>
</Modal>
`;

exports[`<EditSubtraction /> > should render after nickname is changed 1`] = `
<Modal
  label="Edit Subtraction"
  onHide={[MockFunction spy]}
  show={true}
>
  <ModalHeader>
    Edit Subtraction
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Styled(styled.div)>
      <InputGroup>
        <styled.label>
          Name
        </styled.label>
        <Styled(UnstyledInput)
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <styled.label>
          Nickname
        </styled.label>
        <Styled(UnstyledInput)
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Styled(styled.div)>
    <Styled(Component)>
      <SaveButton />
    </Styled(Component)>
  </form>
</Modal>
`;

exports[`<EditSubtraction /> > should render after nickname is changed 2`] = `
<Modal
  label="Edit Subtraction"
  onHide={[MockFunction spy]}
  show={true}
>
  <ModalHeader>
    Edit Subtraction
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Styled(styled.div)>
      <InputGroup>
        <styled.label>
          Name
        </styled.label>
        <Styled(UnstyledInput)
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <styled.label>
          Nickname
        </styled.label>
        <Styled(UnstyledInput)
          name="nickname"
          onChange={[Function]}
          value="Foo"
        />
      </InputGroup>
    </Styled(styled.div)>
    <Styled(Component)>
      <SaveButton />
    </Styled(Component)>
  </form>
</Modal>
`;

exports[`<EditSubtraction /> > should render when [show=false] 1`] = `
<Modal
  label="Edit Subtraction"
  onHide={[MockFunction spy]}
  show={false}
>
  <ModalHeader>
    Edit Subtraction
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Styled(styled.div)>
      <InputGroup>
        <styled.label>
          Name
        </styled.label>
        <Styled(UnstyledInput)
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <styled.label>
          Nickname
        </styled.label>
        <Styled(UnstyledInput)
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Styled(styled.div)>
    <Styled(Component)>
      <SaveButton />
    </Styled(Component)>
  </form>
</Modal>
`;
